# requrests

./: .travis.yml  setup.cfg
tests/: test.py
tests/fakeapi/: hams.json  index.json
tests/fakeapi/ham/: 1.json
