[metadata]
name = requrests
version = 0.1.0
author = Thomas Grainger
author-email = requests@graingert.co.uk
maintainer = Thomas Grainger
maintainer-email = requests@graingert.co.uk
keywords = REST, RESTful, requests
summary = Requests is a small library designed to enable generic access to well-written RESTful APIs
description-file =
    README.rst
    CHANGES.rst
home-page = https://github.com/graingert/requrests
requires-dist =
    requests
    six
classifier = License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[files]
modules = reqrests
extra_files =
    setup.py
    README.rst
    CHANGES.rst

[backwards_compat]
tests-require =
    nose

[test]
test-suite = nose.collector

[nosetests]
with-doctest=1
